# chess-engine

./: Cargo.toml  README.md  rustfmt.toml
crates/board/src/: zobrist.rs
crates/chess-core/src/board/: position.rs
crates/chess-core/src/types/: bitboard.rs  castling.rs  colour.rs  lib.rs  square.rs
crates/types/: Cargo.toml
crates/types/src/: moves.rs  piece.rs
src/: lib.rs
src/board/: position.rs  zobrist.rs
src/types/: bitboard.rs  castling.rs  mod.rs  piece.rs  square.rs
