[package]
name = "chess-engine"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
description = "A high-performance chess engine in Rust"

[dependencies]
# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Parallelism (SMP feature)
crossbeam = { version = "0.8", optional = true }
rayon = { version = "1.10", optional = true }

# Atomics for lock-free structures
parking_lot = "0.12"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Logging (optional, for development)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
proptest = "1.5"
criterion = { version = "0.5", features = ["html_reports"] }

# =============================================================================
# Features
# =============================================================================
[features]
default = ["classical-eval", "magic-movegen"]

# Evaluation
classical-eval = []
nnue-eval = []

# Move generation
magic-movegen = []
pext-movegen = []          # Requires BMI2

# Search
smp = ["dep:crossbeam", "dep:rayon"]

# Extras
syzygy = []
opening-book = []

# Development
tuning = []
trace = []

# =============================================================================
# Lints
# =============================================================================
[lints.rust]
unsafe_code = "warn"
missing_docs = "warn"
rust_2024_compatibility = { level = "warn", priority = -1 }

[lints.clippy]
# Pedantic lints for functional style
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Unwrap/expect discipline
unwrap_used = "warn"
expect_used = "warn"

# Functional programming encouragements
manual_let_else = "warn"
match_same_arms = "warn"
redundant_closure_for_method_calls = "warn"
unnecessary_wraps = "warn"
iter_without_into_iter = "warn"

# Performance lints
trivially_copy_pass_by_ref = "warn"
cloned_instead_of_copied = "warn"
flat_map_option = "warn"

# Allow some pedantic lints that conflict with our style
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
too_many_lines = "allow"

# =============================================================================
# Profiles
# =============================================================================

# Development: fast compilation, some optimizations for playability
[profile.dev]
opt-level = 1
debug = true
debug-assertions = true
overflow-checks = true
lto = false
incremental = true

# Dependencies get higher optimization even in dev
[profile.dev.package."*"]
opt-level = 2

# Release: maximum performance
[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

# Release with debug symbols (for profiling)
[profile.release-with-debug]
inherits = "release"
debug = true
strip = false

# Benchmarking profile
[profile.bench]
inherits = "release"
debug = true
lto = "thin"