[package]
name = "chess-types"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
# No dependencies - this crate is pure and const

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true

[features]
default = []
serde = ["dep:serde"]

[dependencies.serde]
workspace = true
optional = true